@@ -6,7 +6,8 @@ Next Release (will be 4.0)
 
 * Drops support for Python 3.6.
 * Minimum Django version is now Django 3.2.
-* Added compatiblity with Django 4.1.
+* Added compatibility with Django 4.1.
+* Removed deprecated static files handling in favor of ``django.contrib.staticfiles``.
 
 3.0.5 (2022-06-24)
 ------------------
